--- a/seeds/projectData.json
+++ b/seeds/projectData.json
@@ -1,17 +1,17 @@
 [
   {
-    "name": "Music Near Me",
-    "description": "A mobile app that will send you notifications whenever a concert is playing in your area.",
+    "name": "MongDB is better than MySQL",
+    "description": "MySQL is living in the past. MongoDB is way easier to use.",
     "needed_funding": 5000
   },
   {
-    "name": "The Ultimate Tech Quiz",
-    "description": "A web app that will give users 10 new technical questions each day and track their progress in things like programming, cybersecurity, database architecture, and more!",
+    "name": "Coding Bootcamps",
+    "description": "Only take a programming bootcamp if you have some knowledge or you are not working full-time.",
     "needed_funding": 10000
   },
   {
-    "name": "Roll 'Em Up",
-    "description": "A game for Windows and macOS where players move a ball through a series of increasingly challenging mazes.",
+    "name": "Front-end Development",
+    "description": "Front-end development is way more fun",
     "needed_funding": 800
   }
 ]
