update seeds, add comment seeds

--- a/seeds/projectData.json
+++ b/seeds/projectData.json
@@ -1,11 +1,11 @@
 [
   {
     "name": "MongDB is better than MySQL",
-    "description": "MySQL is living in the past. MongoDB is way easier to use.",
+    "description": "MySQL is living in the past. MongoDB is way easier to use."
   },
   {
     "name": "Coding Bootcamps",
-    "description": "Only take a programming bootcamp if you have some knowledge or you are not working full-time.",
+    "description": "Only take a programming bootcamp if you have some knowledge or you are not working full-time."
   },
   {
     "name": "Front-end Development",
