--- a/seeds/projectData.json
+++ b/seeds/projectData.json
@@ -1,14 +1,14 @@
 [
   {
-    "name": "MongDB is better than MySQL",
+    "title": "MongDB is better than MySQL",
     "description": "MySQL is living in the past. MongoDB is way easier to use."
   },
   {
-    "name": "Coding Bootcamps",
+    "title": "Coding Bootcamps",
     "description": "Only take a programming bootcamp if you have some knowledge or you are not working full-time."
   },
   {
-    "name": "Front-end Development",
+    "title": "Front-end Development",
     "description": "Front-end development is way more fun"
   }
 ]
