--- a/seeds/projectData.json
+++ b/seeds/projectData.json
@@ -1,13 +1,16 @@
 [
   {
+    "user_id":1,
     "title": "MongoDB vs MySQL",
     "description": "MySQL is living in the past. MongoDB is user friendly and is better for a visual learner. Learning MySQL Joins can be very complicated when using large sets of data."
   },
   {
+    "user_id":2,
     "title": "Coding Bootcamps",
     "description": "Only take a programming bootcamp if you have some previous knowledge. It is also very hard to keep up with the assignments while working full-time. I highly recommend not working at all or only working part-time."
   },
   {
+    "user_id":3,
     "title": "Front-end vs Back-end Dev",
     "description": "Front-end development is more fun than the back-end because you have the ability to play around with colors. I recommend learning both so that you have a deeper understanding."
   }
